prog_tech_labs: completed fourth lab

--- a/prog_tech_labs/program_tech_labs/Views/Pages/Lab4Page.xaml
+++ b/prog_tech_labs/program_tech_labs/Views/Pages/Lab4Page.xaml
@@ -13,7 +13,7 @@
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     mc:Ignorable="d">
     <Grid Margin="20">
-        <ListBox>
+        <ListBox Name="DomainsListBox">
         </ListBox>
     </Grid>
 </Page>
